--- a/cookies and session/package.json
+++ b/cookies and session/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.6",
     "autoprefixer": "^10.4.21",
+    "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
     "postcss": "^8.5.3",
