--- a/Adding User Model/package.json
+++ b/Adding User Model/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.6",
     "autoprefixer": "^10.4.21",
+    "bcryptjs": "^3.0.2",
     "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
